// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading component renders when active 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="fade"
  persisted="true"
>
  <div
    aria-busy="true"
    aria-label="Loading"
    class="vl-overlay vl-active vl-full-page"
    tabindex="0"
  >
    <div
      class="vl-background"
    />
    <div
      class="vl-icon"
    >
      
      
      
      <div
        class="spinner spinner--rotate-square"
        style="background-color: rgb(0, 0, 0); width: 40px; height: 40px; animation-duration: 1.2s;"
      />
      
      
      
    </div>
  </div>
</transition-stub>
`;

exports[`Loading component renders when not active 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="fade"
  persisted="true"
>
  <div
    aria-busy="false"
    aria-label="Loading"
    class="vl-overlay vl-active vl-full-page"
    style="display: none;"
    tabindex="0"
  >
    <div
      class="vl-background"
    />
    <div
      class="vl-icon"
    >
      
      
      
      <div
        class="spinner spinner--rotate-square"
        style="background-color: rgb(0, 0, 0); width: 40px; height: 40px; animation-duration: 1.2s;"
      />
      
      
      
    </div>
  </div>
</transition-stub>
`;
